# realsense-test

./: CMakeLists.txt  README.md  build.sh  get_bag.txt  main.cpp
playback/: CMakeLists.txt  build.sh  main.cpp
